--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -45,9 +45,13 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  backdrop-filter: blur(5px) saturate(50%);
-  -webkit-backdrop-filter: blur(5px) saturate(50%);
-  background-color: rgba(17, 25, 40, 0.55);
+  backdrop-filter: blur(5px) saturate(70%);
+  -webkit-backdrop-filter: blur(5px) saturate(70%);
+  background-color: rgba(17, 25, 40, 0.75);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
+}
+.nav-elements {
+  display: flex;
+  gap: 40px;
 }
